--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 .topbar.dark{
     width: 100%;
-    height: 10vh;
+    height: 60px;
     background-color: #212121;
     padding: 1rem;
     font-family: 'Montserrat', sans-serif;
@@ -72,7 +72,7 @@
 
 .dark{
     width: 100vw;
-    height: 93vh;
+    height: 100vh;
     resize: none;
     padding: .5rem .5rem;
     line-height: 1.8rem;
