--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
     outline: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    
 }
 
 
@@ -45,12 +45,11 @@
 
 .text{
     width: 100%;
-    
 }
 
 .textarea{
     width: 100vw;
-    height:100vh;
+    height: calc(100vh - 60px);
     resize: none;
     padding: .5rem .5rem;
     line-height: 1.8rem;
